# Natix_miner

./: .gitignore  .~lock.dds.odt#  ANTI_OVERFITTING_FIXES.md  BUGS_FIXED_FINAL.md  CHANGES_SUMMARY_NO_MOCKS_2026.md  COMPLETE_DEPLOYMENT_PLAN.md  COMPLETE_DEPLOYMENT_PLAN_PART2.md  COMPLETE_LAPTOP_TO_SSH_GUIDE.md  CONSOLIDATED_ANALYSIS.md  CORRECTED_DATASET_PLAN.md  CORRECTIONS_AND_ENHANCEMENTS_2026.md  CURRENT_STATUS_AND_OPTIONS.md  DATA_PREPARATION_GUIDE.md  IMPLEMENTATION_STRATEGY_REAL_2026.md  INFERENCE_ARCHITECTURE_2026.md  LAPTOP_SETUP_GUIDE.md  MISSING_ANALYSIS_FINAL.md  MULTI_DATASET_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START_CORRECTED.md  README.md  REALISTIC_DEPLOYMENT_PLAN.md  SSH_DATASET_DOWNLOAD_GUIDE.md  SSH_QUICK_START.md  SSH_SETUP_GUIDE.md  SSH_SETUP_INSTRUCTIONS.md  START_HERE.md  START_HERE_REALISTIC.md  TRAINING_EXPLAINED.md  TRAINING_PLAN_2026.md  TRAINING_PLAN_2026_CLEAN.md  ULTIMATE_120_TODO_PLAN.md  ULTIMATE_COMPLETE_210_TODO_PLAN.md  ULTIMATE_PLAN_2026_LOCAL_FIRST.md  ULTIMATE_PLAN_2026_LOCAL_FIRST.md.backup  UPGRADE_SUMMARY.md  Untitled 1.odt  Untitled 2.odt  WHAT_CHANGED.md  aaa.md  (+55 more)
stage1_pro_modular_training_system/stage1_finalV/: CALIBRATION_2026_README.md  README.md  TIER0_CLI_README.md  TODO_IMPLEMENTATION_ORDER.md  pyproject.toml  requirements.txt  test_imports.py  verify_fixes.py
stage1_pro_modular_training_system/stage1_finalV/configs/: base.yaml  config.yaml
stage1_pro_modular_training_system/stage1_finalV/scripts/: run_phase.py  run_step.py  train.py  train_lightning.py
stage1_pro_modular_training_system/stage1_finalV/src/: __init__.py
stage1_pro_modular_training_system/stage1_finalV/tests/: test_conformal_2026.py  test_dinov3_backbone.py  test_step_contract.py
stage1_ultimate/: 2025-12-29-this-session-is-being-continued-from-a-previous-co.txt  BUG_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  CRITICAL_BUGS_FIXED.md  CRITICAL_FINDINGS.md  DAY1_FOUNDATION_COMPLETE.md  DAY2_STEPS_COMPLETE.md  DAY3_DAY4_COMPLETE.md  DAY5_COMPLETE.md  DAY6_DAY7_COMPLETE.md  DAYS_1_TO_5_COMPLETE.md  DEPLOY_CHECKLIST.md  FILES_CREATED_DAY1_DAY2.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_PROGRESS_SUMMARY.md  FIXES_APPLIED.md  HONEST_STATUS.md  PROGRESS_SUMMARY.md  README.md  REALISTIC_ACTION_PLAN_DEC30.md  REFACTOR_SUMMARY.md  SSH_GPU_DEPLOYMENT_GUIDE.md  TODO_1-20_COMPLETE.md  ULTIMATE_TRAINING_ROADMAP_2026.md  WEEK_0_CRITICAL_FIXES.md  WEEK_0_EXECUTION_PLAN.md  WHAT_I_ANALYZED.md  final_plan_is_this.md  pyproject.toml  pytest.ini
stage1_ultimate/.ruff_cache/0.13.2/: 1593709697956122087
stage1_ultimate/configs/: config.yaml
stage1_ultimate/configs/calibration/: temperature.yaml
stage1_ultimate/configs/data/: augmentation.yaml  natix.yaml
stage1_ultimate/configs/evaluation/: default.yaml
stage1_ultimate/configs/model/: dinov2_vitb.yaml  dinov2_vits.yaml  dinov3_multiview.yaml  dinov3_vith16.yaml  phase4_explora.yaml
stage1_ultimate/configs/phase2/: mcc.yaml
stage1_ultimate/configs/phase4a/: explora.yaml
stage1_ultimate/configs/training/: baseline.yaml  gate.yaml  optimization.yaml
stage1_ultimate/deployment/: requirements_local_test.txt  requirements_production.txt
stage1_ultimate/deployment/scripts/: setup_local_env.sh
stage1_ultimate/docs/: AGENT_INSTRUCTIONS.md  DAY1_ARCHITECTURE.md  MASTER_PLAN.md  PRECISION_SAFETY.md  SSH_PREPARATION_CHECKLIST.md  START_HERE.md  TODO_CHECKLIST.md
stage1_ultimate/docs/allstepsoffupgrade/: 00_README.md  01_strong_augmentations_2025.md  02_task_peft_dora_rslora_pissa.md  03_calibration_sweep_tiers.md  04_pytorch26_compile.md  05_byol_swav_hybrid.md  06_flexattention_cvfm.md  code.md  code1exple.md  code2exple.md  codeexmaple4.md  codexple3.md  day5_6.md
stage1_ultimate/docs/week1/: DAY1_DAY2_PROGRESS.md
stage1_ultimate/examples/: train_baseline.py
stage1_ultimate/outputs/: pipeline_state_failed.json
stage1_ultimate/outputs/stage1_ultimate/: splits.json
stage1_ultimate/scripts/: 0_setup_ssh.sh  10_run_phase1_full.sh  11_run_phase2_and_6.sh  1_install_deps.sh  2_download_data.sh  3_create_splits.sh  4_run_phase4_test.sh  5_run_phase1_with_explora.sh  6_run_phase1_baseline.sh  7_compare_results.sh  8_run_phase4_full.sh  9_run_full_baseline.sh  check_duplicates.py  download_full_dataset.py  generate_splits.py  run_full_pipeline_ssh.sh  smoke_test_local.sh  train_cli.py  train_cli_v2.py  verify_eval_gateway.py
stage1_ultimate/scripts/inference/: inference_with_foods_tta.py
stage1_ultimate/scripts/preprocessing/: compute_gps_clusters.py  compute_gps_weights.py  generate_sam3_masks.py  validate_gps_sampling.py
stage1_ultimate/scripts/training/: train_dora_folds.py  train_ultimate_day56.py
stage1_ultimate/src/: __init__.py
stage1_ultimate/src/callbacks/: val_calib_saver.py
stage1_ultimate/src/compression_2026/: __init__.py  production_stack.py
stage1_ultimate/src/contracts/: artifact_schema.py  split_contracts.py  validators.py
stage1_ultimate/src/data/: __init__.py  augmentation.py  datamodule.py  label_schema.py  natix_dataset.py  split_generator.py  transforms.py
stage1_ultimate/src/explora_peft/: domain.py
stage1_ultimate/src/infrastructure/: __init__.py  logging_config.py
stage1_ultimate/src/losses/: combined_loss.py
stage1_ultimate/src/models/: __init__.py  backbone.py  complete_model.py  explora_config.py  explora_module.py  head.py  module.py  multi_view.py
stage1_ultimate/src/peft/: __init__.py  explora_domain.py
stage1_ultimate/src/pipeline/: dag_engine.py  phase_spec.py
stage1_ultimate/src/streetvision/: __init__.py
stage1_ultimate/src/utils/: ema.py
stage1_ultimate/streetvision_stage1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stage1_ultimate/tests/: README.md  __init__.py  conftest.py
stage1_ultimate/tests/integration/: __init__.py  test_dag_engine.py  test_eval_drift.py  (+3 more)
stage1_ultimate/tools/: check_natix_distribution.py  debug_nan_logits.py  export_natix_fast.py  export_natix_hf_to_disk.py  export_natix_simple.py  export_natix_subset.py  export_natix_subset_stratified.py  inspect_checkpoint.py  inspect_labels.py  inspect_logits.py
(+478 files in other folders)
