[tool.poetry]
name = "stage1-pro-modular"
version = "0.1.0"
description = "Production-grade roadwork detection with SOTA 2025 methods"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

# Core ML
torch = {version = "^2.6.0", source = "pytorch"}
lightning = "^2.4.0"
hydra-core = "^1.4.0"
hydra-zen = "^0.12.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
omegaconf = "^2.3.0"

# PEFT & Attention
peft = "^0.20.0"
flash-attn = {version = "^3.0.0", optional = true}

# Data
torchvision = "^0.21.0"
timm = "^1.0.12"
albumentations = "^1.4.24"
pandas = "^2.2.3"
numpy = "^2.2.0"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"

# Metrics
scikit-learn = "^1.6.0"
torchmetrics = "^1.5.0"

# MLOps
wandb = "^0.18.0"
mlflow = "^2.18.0"
dvc = "^3.50.0"
dvc-s3 = "^3.0.0"
dvc-gs = "^3.0.0"

# Deployment
onnx = "^1.18.0"
onnxruntime-gpu = "^1.20.0"
tritonclient = {version = "^2.50.0", all = true}

# Utilities
rich = "^13.9.0"
tqdm = "^4.67.0"
typer = "^0.12.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

# Type checking
pyright = "^1.1.0"
mypy = "^1.13.0"

# Code quality
ruff = "^0.8.0"
pre-commit = "^4.0.0"
black = "^24.10.0"
isort = "^5.13.0"

# Documentation
sphinx = "^8.1.0"
myst-parser = "^4.0.0"
sphinx-autodoc2 = "^0.5.0"

# Jupyter
jupyter = "^1.1.0"
ipykernel = "^6.29.0"
nbstripout = "^0.7.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

